# CMake最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.26.0)

# 项目名字
PROJECT(server)

# C/C++语言标准
SET(CMAKE_C_STANDARD            11)
SET(CMAKE_C_STANDARD_REQUIRED   ON)
SET(CMAKE_C_EXTENSIONS          OFF)
SET(CMAKE_CXX_STANDARD          20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS        OFF)

# 生成器配置选项
IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
    MESSAGE(STATUS "CMAKE_BUILD_TYPE is empty, set default build type to 'Release'.")
ELSEIF(NOT (("${CMAKE_BUILD_TYPE}" STREQUAL "Debug") OR ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")))
    SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
    MESSAGE(STATUS "CMAKE_BUILD_TYPE is invalid, must be one of 'Debug | Release', set default build type to 'Release'.")
ENDIF()

# 生成compile_commands.json文件
SET(CMAKE_EXPORT_COMPILE_COMMANDS True)

# 根目录和工作目录
SET(CMAKE_PROJECT_ROOT_DIR             ${CMAKE_SOURCE_DIR})
SET(CMAKE_PROJECT_BUILD_ROOT_DIR       ${CMAKE_SOURCE_DIR}/.build)
SET(PROJECT_DEBUGGER_WORKING_DIRECTORY ${CMAKE_PROJECT_BUILD_ROOT_DIR}/${CMAKE_BUILD_TYPE})

# 生成目录
FOREACH(SERVER_OUTPUT_CONFIG Debug Release RelWithDebInfo MinSizeRel)
    STRING(TOUPPER ${SERVER_OUTPUT_CONFIG} SERVER_OUTPUT_CONFIG_UPPER)
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${SERVER_OUTPUT_CONFIG_UPPER} ${CMAKE_BINARY_DIR}/bin)
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${SERVER_OUTPUT_CONFIG_UPPER} ${CMAKE_BINARY_DIR}/bin)
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${SERVER_OUTPUT_CONFIG_UPPER} ${CMAKE_BINARY_DIR}/bin)
ENDFOREACH()

# 宏定义、编译选项、链接选项
IF(WIN32)
    # rpath选项
    SET(CMAKE_SKIP_BUILD_RPATH True)

    # 公共宏定义
    SET(PROJECT_COMMON_COMPILE_DEFINITIONS
        _WIN32_WINNT=0x0A00
    )

    # 公共编译选项
    SET(PROJECT_COMMON_COMPILE_OPTIONS_C
        /utf-8
        /bigobj
        /W4
        /MP
        /wd4251
    )

    SET(PROJECT_COMMON_COMPILE_OPTIONS_CXX
        /utf-8
        /permissive-
        /Zc:__cplusplus
        /bigobj
        /W4
        /MP
        /wd4251
    )

    # 公共链接选项
    SET(PROJECT_COMMON_EXE_LINK_OPTIONS
        # ...
    )

    SET(PROJECT_COMMON_SHARED_LINK_OPTIONS
        # ...
    )
ELSEIF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    # rpath选项
    SET(CMAKE_SKIP_BUILD_RPATH False)

    # 位置无关代码选项
    SET(CMAKE_POSITION_INDEPENDENT_CODE True)

    # 公共宏定义
    SET(PROJECT_COMMON_COMPILE_DEFINITIONS
        # ...
    )

    # 公共编译选项
    SET(PROJECT_COMMON_COMPILE_OPTIONS_C
        -Wall
        -Wextra
        -Wpedantic
    )

    SET(PROJECT_COMMON_COMPILE_OPTIONS_CXX
        -Wall
        -Wextra
        -Wpedantic
    )

    # 公共链接选项
    SET(PROJECT_COMMON_EXE_LINK_OPTIONS
        # ...
    )

    SET(PROJECT_COMMON_SHARED_LINK_OPTIONS
        # ...
    )
ELSE()
    MESSAGE(FATAL_ERROR "The current platform is unsupported!")
ENDIF()

# 工程统一编译选项
FUNCTION(PROJECT_TARGET_APPLY_COMMON_OPTIONS TARGET_NAME)
    GET_TARGET_PROPERTY(CURRENT_TARGET_TYPE ${TARGET_NAME} TYPE)

    IF(PROJECT_COMMON_COMPILE_DEFINITIONS)
        TARGET_COMPILE_DEFINITIONS(${TARGET_NAME} PRIVATE ${PROJECT_COMMON_COMPILE_DEFINITIONS})
    ENDIF()

    FOREACH(ITEM ${PROJECT_COMMON_COMPILE_OPTIONS_C})
        TARGET_COMPILE_OPTIONS(${TARGET_NAME} PRIVATE $<$<COMPILE_LANGUAGE:C>:${ITEM}>)
    ENDFOREACH()

    FOREACH(ITEM ${PROJECT_COMMON_COMPILE_OPTIONS_CXX})
        TARGET_COMPILE_OPTIONS(${TARGET_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${ITEM}>)
    ENDFOREACH()

    IF("${CURRENT_TARGET_TYPE}" STREQUAL "EXECUTABLE")
        IF(PROJECT_COMMON_EXE_LINK_OPTIONS)
            TARGET_LINK_OPTIONS(${TARGET_NAME} PRIVATE ${PROJECT_COMMON_EXE_LINK_OPTIONS})
        ENDIF()

        IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
            SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
                BUILD_WITH_INSTALL_RPATH True
                INSTALL_RPATH "\$ORIGIN"
            )
        ENDIF()
    ELSEIF(("${CURRENT_TARGET_TYPE}" STREQUAL "SHARED_LIBRARY") OR ("${CURRENT_TARGET_TYPE}" STREQUAL "MODULE_LIBRARY"))
        IF(PROJECT_COMMON_SHARED_LINK_OPTIONS)
            TARGET_LINK_OPTIONS(${TARGET_NAME} PRIVATE ${PROJECT_COMMON_SHARED_LINK_OPTIONS})
        ENDIF()

        IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
            SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
                BUILD_WITH_INSTALL_RPATH True
                INSTALL_RPATH "\$ORIGIN"
            )
        ENDIF()
    ENDIF()
ENDFUNCTION()

# Poco库组件
SET(POCO_COMPONENTS
    Foundation
    Encodings
    XML
    JSON
    Util
    Net
    NetSSL
    Crypto
    Data
    DataSQLite
    DataMySQL
    Redis
    JWT
    Prometheus
    Zip
)

# 添加子目录
ADD_SUBDIRECTORY(3rd)
ADD_SUBDIRECTORY(src)

# VS工程设置
IF(WIN32)
    SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
    SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmake")
ENDIF()

# 调试信息
MESSAGE(STATUS "---------------------------------------------------------------------")
MESSAGE(STATUS "CMAKE_PROJECT_NAME                 = ${CMAKE_PROJECT_NAME}")
MESSAGE(STATUS "CMAKE_SOURCE_DIR                   = ${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_BINARY_DIR                   = ${CMAKE_BINARY_DIR}")
MESSAGE(STATUS "PROJECT_NAME                       = ${PROJECT_NAME}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR                 = ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "PROJECT_BINARY_DIR                 = ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "CMAKE_PROJECT_ROOT_DIR             = ${CMAKE_PROJECT_ROOT_DIR}")
MESSAGE(STATUS "CMAKE_PROJECT_BUILD_ROOT_DIR       = ${CMAKE_PROJECT_BUILD_ROOT_DIR}")
MESSAGE(STATUS "PROJECT_DEBUGGER_WORKING_DIRECTORY = ${PROJECT_DEBUGGER_WORKING_DIRECTORY}")
MESSAGE(STATUS "CMAKE_SYSTEM_NAME                  = ${CMAKE_SYSTEM_NAME}")
MESSAGE(STATUS "CMAKE_SYSTEM_VERSION               = C${CMAKE_SYSTEM_VERSION}")
MESSAGE(STATUS "CMAKE_C_STANDARD                   = C${CMAKE_C_STANDARD}")
MESSAGE(STATUS "CMAKE_CXX_STANDARD                 = C++${CMAKE_CXX_STANDARD}")
MESSAGE(STATUS "CMAKE_BUILD_TYPE                   = ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "CMAKE_SKIP_BUILD_RPATH             = ${CMAKE_SKIP_BUILD_RPATH}")
MESSAGE(STATUS "CMAKE_POSITION_INDEPENDENT_CODE    = ${CMAKE_POSITION_INDEPENDENT_CODE}")
MESSAGE(STATUS "CMAKE_C_FLAGS                      = ${CMAKE_C_FLAGS}")
MESSAGE(STATUS "CMAKE_C_FLAGS_DEBUG                = ${CMAKE_C_FLAGS_DEBUG}")
MESSAGE(STATUS "CMAKE_C_FLAGS_RELEASE              = ${CMAKE_C_FLAGS_RELEASE}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS                    = ${CMAKE_CXX_FLAGS}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS_DEBUG              = ${CMAKE_CXX_FLAGS_DEBUG}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS_RELEASE            = ${CMAKE_CXX_FLAGS_RELEASE}")
MESSAGE(STATUS "PROJECT_COMMON_COMPILE_DEFINITIONS = ${PROJECT_COMMON_COMPILE_DEFINITIONS}")
MESSAGE(STATUS "PROJECT_COMMON_COMPILE_OPTIONS_C   = ${PROJECT_COMMON_COMPILE_OPTIONS_C}")
MESSAGE(STATUS "PROJECT_COMMON_COMPILE_OPTIONS_CXX = ${PROJECT_COMMON_COMPILE_OPTIONS_CXX}")
MESSAGE(STATUS "PROJECT_COMMON_EXE_LINK_OPTIONS    = ${PROJECT_COMMON_EXE_LINK_OPTIONS}")
MESSAGE(STATUS "PROJECT_COMMON_SHARED_LINK_OPTIONS = ${PROJECT_COMMON_SHARED_LINK_OPTIONS}")
MESSAGE(STATUS "POCO_COMPONENTS                    = ${POCO_COMPONENTS}")
MESSAGE(STATUS "---------------------------------------------------------------------")
